Added the Envelope and Document Fields example to show differences between the two types of fields. Views of both can now be seen in Connect message.

--- a/Web.config
+++ b/Web.config
@@ -54,13 +54,11 @@
     <add key="API.IntegratorKey" value="FINA-311bdb00-ad59-4750-924d-ee720aeaa43e"/>
     <add key="API.Email" value="magicparadigm@outlook.com"/>
     <add key="LogfilePath" value="application.log"/>
-
-
     <add key="JointSigner" value="@"/>
-
     <!-- Settings for the Splash page displayed on IPad -->
     <add key="RecipientTokenClientURLsPrefix" value="http://www.google.com/"/>
-
+    <add key="ConnectListener" value="http://sedemo1.cloudapp.net/DocusignFinance/receiver.aspx"/>
+    <add key="DBConnectionString" value="Data Source=SEDEMO1\SQLEXPRESS;Initial Catalog=Starwood;User=magicparadigm;Password=madras"/>
   </appSettings>
 
 </configuration>
