--- a/Web.config
+++ b/Web.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0"?>
-
 <configuration>
   <configSections>
-  <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net"/>
   </configSections>
   <log4net>
     <appender name="LogFileAppender" type="log4net.Appender.FileAppender">
@@ -12,38 +11,39 @@
       </layout>
     </appender>
     <root>
-      <level value="All" />
-      <appender-ref ref="LogFileAppender" />
+      <level value="All"/>
+      <appender-ref ref="LogFileAppender"/>
     </root>
   </log4net>
   <system.web>
-    <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Net.Http, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+        <add assembly="System.Net.Http.WebRequest, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A"/>
+      </assemblies>
+    </compilation>
+    <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
         <binding name="DSAPIServiceSoap" maxReceivedMessageSize="134217728">
-          <security mode="Transport" />
+          <security mode="Transport"/>
         </binding>
-        <binding name="DSAPIServiceSoap1" maxReceivedMessageSize="134217728" />
+        <binding name="DSAPIServiceSoap1" maxReceivedMessageSize="134217728"/>
         <binding name="DSAPIServiceSoap2" maxReceivedMessageSize="134217728">
-          <security mode="Transport" />
+          <security mode="Transport"/>
         </binding>
-        <binding name="DSAPIServiceSoap3" />
+        <binding name="DSAPIServiceSoap3"/>
         <binding name="APIServiceSoap">
-          <security mode="Transport" />
+          <security mode="Transport"/>
         </binding>
-        <binding name="APIServiceSoap1" />
+        <binding name="APIServiceSoap1"/>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://demo.docusign.net/api/3.0/api.asmx"
-        binding="basicHttpBinding" bindingConfiguration="APIServiceSoap"
-        contract="ServiceReference2.APIServiceSoap" name="APIServiceSoap" />
-      <endpoint address="https://demo.docusign.net/api/3.0/dsapi.asmx"
-        binding="basicHttpBinding" bindingConfiguration="DSAPIServiceSoap2"
-        contract="ServiceReference1.DSAPIServiceSoap" name="DSAPIServiceSoap" />
+      <endpoint address="https://demo.docusign.net/api/3.0/api.asmx" binding="basicHttpBinding" bindingConfiguration="APIServiceSoap" contract="ServiceReference2.APIServiceSoap" name="APIServiceSoap"/>
+      <endpoint address="https://demo.docusign.net/api/3.0/dsapi.asmx" binding="basicHttpBinding" bindingConfiguration="DSAPIServiceSoap2" contract="ServiceReference1.DSAPIServiceSoap" name="DSAPIServiceSoap"/>
     </client>
   </system.serviceModel>
   <appSettings>
@@ -59,6 +59,6 @@
     <add key="RecipientTokenClientURLsPrefix" value="http://www.google.com/"/>
     <add key="ConnectListener" value="http://sedemo1.cloudapp.net/DocusignFinance/receiver.aspx"/>
     <add key="DBConnectionString" value="Data Source=SEDEMO1\SQLEXPRESS;Initial Catalog=Starwood;User=magicparadigm;Password=madras"/>
+    <add key="DocuSignServer"  value="https://demo.docusign.net" />
   </appSettings>
-
 </configuration>
