--- a/Web.config
+++ b/Web.config
@@ -53,6 +53,9 @@
     <add key="API.Password" value="docusign4"/>
     <add key="API.IntegratorKey" value="FINA-311bdb00-ad59-4750-924d-ee720aeaa43e"/>
     <add key="API.Email" value="magicparadigm@outlook.com"/>
+    <add key="API.NotaryEmail" value="docusign_notary1+demo@outlook.com"/>
+    <add key="API.NotaryPassword" value="docusign2016"/>
+    <add key="API.NotaryAccountID" value="c4cdb488-8ac3-421d-a844-25554bb95e6f"/>
     <add key="LogfilePath" value="application.log"/>
     <add key="JointSigner" value="@"/>
     <!-- Settings for the Splash page displayed on IPad -->
